--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "scikit-learn (>=1.7.2,<2.0.0)",
     "uvicorn (>=0.37.0,<0.38.0)",
     "pydantic (>=2.11.10,<3.0.0)",
-    "pandas (>=2.3.3,<3.0.0)"
+    "pandas (>=2.3.3,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
