finished the minimalistic streamlit ui

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pydantic (>=2.11.10,<3.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "langchain-openai (>=0.3.35,<0.4.0)"
+    "langchain-openai (>=0.3.35,<0.4.0)",
+    "streamlit (>=1.50.0,<2.0.0)"
 ]
 
 
