--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,133 @@
-[project]
-name = "doctors-appointment-agent"
-version = "0.1.0"
-description = "a multi-agent system for booking appointments with doctors in hospitals"
-authors = [
-    {name = "oladimeji balogun",email = "oladimejib.tech@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.10,<4.0.0"
-dependencies = [
-    "langgraph (>=0.6.8,<0.7.0)",
-    "langchain-groq (>=0.3.8,<0.4.0)",
-    "fastapi (>=0.118.0,<0.119.0)",
-    "scikit-learn (>=1.7.2,<2.0.0)",
-    "uvicorn (>=0.37.0,<0.38.0)",
-    "pydantic (>=2.11.10,<3.0.0)",
-    "pandas (>=2.3.3,<3.0.0)",
-    "dotenv (>=0.9.9,<0.10.0)",
-    "langchain-openai (>=0.3.35,<0.4.0)",
-    "streamlit (>=1.50.0,<2.0.0)"
-]
-
-
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "doctor-appointment-system"
+version = "1.0.0"
+description = "AI-powered doctor appointment system with memory-enabled chat"
+readme = "README.md"
+license = {text = "MIT"}
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+maintainers = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+keywords = ["healthcare", "ai", "appointments", "chatbot", "multi-agent"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Healthcare Industry",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+requires-python = ">=3.8"
+dependencies = [
+    "fastapi>=0.104.1",
+    "uvicorn[standard]>=0.24.0",
+    "langgraph>=0.6.8,<0.7.0",
+    "langchain-groq>=0.3.8,<0.4.0",
+    "langchain-openai>=0.3.35,<0.4.0",
+    "pandas>=2.1.3",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
+    "streamlit>=1.28.0",
+    "requests>=2.31.0",
+    "python-dotenv>=1.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.3",
+    "pytest-asyncio>=0.21.1",
+    "black>=23.11.0",
+    "isort>=5.12.0",
+    "mypy>=1.7.1",
+    "flake8>=6.0.0",
+]
+test = [
+    "pytest>=7.4.3",
+    "pytest-asyncio>=0.21.1",
+    "httpx>=0.25.0",
+]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.4.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/yourusername/doctor-appointment-system"
+Documentation = "https://github.com/yourusername/doctor-appointment-system/docs"
+Repository = "https://github.com/yourusername/doctor-appointment-system"
+"Bug Tracker" = "https://github.com/yourusername/doctor-appointment-system/issues"
+
+[project.scripts]
+appointment-server = "main:main"
+appointment-ui = "ui.run_enhanced_app:main"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.json", "*.csv", "*.conf", "*.md"]
+
+# black configuration
+[tool.black]
+line-length = 88
+target-version = ['py38', 'py39', 'py310', 'py311']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+# isort configuration
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["src"]
+
+# mypy configuration
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+
+# pytest configuration
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q --strict-markers"
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
+]
