--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -1,7 +1,7 @@
 # Streamlit secrets configuration
 # Add this content to your Streamlit Cloud secrets
 [api]
-backend_url = "https://your-render-app.onrender.com"
+backend_url = "http://127.0.0.1:8000"
 request_timeout = 15
 
 [app]
