--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Configuration Template
-# Copy this file to .env.local for local development
+# make a coopy this file to .env.local for local development
 
 # API Configuration
 REACT_APP_API_BASE_URL=http://127.0.0.1:8000
@@ -7,4 +7,3 @@ REACT_APP_API_TIMEOUT=30000
 REACT_APP_ENVIRONMENT=development
 
 # Optional: Analytics or other services
-# REACT_APP_ANALYTICS_ID=your_analytics_id
